Changes To my profile
I changed the description of my titles and hobbies with my own and replaced the name with my own. I also changed their colors to match my style, and I finally replaced the image by putting the image into a file then revealing in file explorer, where I pasted it into the code.

--- a/app.css
+++ b/app.css
@@ -13,10 +13,10 @@
   
   ---------------------------------------------------------------------- */
   :root {
-      --color-lightest: #ffcdcd;
-      --color-light: #ee6c6c;
-      --color: #EC6565;
-      --color-dark: #ca4e4e;
+      --color-lightest: #28dbc3;
+      --color-light: #9faa01;
+      --color: #075f05;
+      --color-dark: #4e52ca;
       --font: "Open Sans", Helvetica, sans-serif;
   }
 
